--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body onload="getWeatherData('Luleburgaz')">
+<body onload="getWeatherData('Budapest')">
     <div class="main position-absolute top-50 start-50 translate-middle">
         <div class="date-weather my-2 p-3 rounded-3 text-center">
             <div class="date-weather-info rounded-3 p-2">
@@ -38,7 +38,9 @@
                         <h4 class="mx-2">~/general</h4>
                         <p class="mx-3 my-0"><a href="https://www.youtube.com">├─ youtube</a></p>
                         <p class="mx-3 my-0"><a href="https://www.reddit.com">├─ reddit</a></p>
+                        <p class="mx-3 my-0"><a href="https://www.4chan.org">├─ 4chan</a></p>
                         <p class="mx-3 my-0"><a href="https://www.github.com">├─ github</a></p>
+                        <p class="mx-3 my-0"><a href="https://www.discord.com/app">├─ discord</a></p>
                         <p class="mx-3 my-0"><a href="https://gitlab.com">└─ gitlab</a></p>
                     </div>
 
@@ -58,7 +60,8 @@
                         <p class="mx-3 my-0"><a href="https://leetcode.com">├─ leetcode</a></p>
                         <p class="mx-3 my-0"><a href="https://www.hackerrank.com/dashboard">├─ hckrrank</a></p>
                         <p class="mx-3 my-0"><a href="https://www.codewars.com/dashboard">├─ codewars</a></p>
-                        <p class="mx-3 my-0"><a href="https://itsfoss.com">└─ itsfoss</a></p>
+                        <p class="mx-3 my-0"><a href="https://itsfoss.com">├─ itsfoss</a></p>
+                        <p class="mx-3 my-0"><a href="https://stackoverflow.com/">└─ stack</a></p>
                     </div>
                 </div>
             </div>
