added debian wiki under utils

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="col mx-1 p-3 rounded-3">
                     <div class="container rounded-3 p-2">
                         <h4 class="mx-2">~/utils</h4>
+                        <p class="mx-3 my-0"><a href="https://wiki.debian.org/">├─ debian wiki</a></p>
                         <p class="mx-3 my-0"><a href="https://wiki.archlinux.org">├─ arch wiki</a></p>
                         <p class="mx-3 my-0"><a href="https://mail.proton.me">├─ mail</a></p>
                         <p class="mx-3 my-0"><a href="https://www.deepl.com/translator">├─ deepl</a></p>
