--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <p class="mx-3 my-0"><a href="https://wiki.archlinux.org">├─ arch wiki</a></p>
                         <p class="mx-3 my-0"><a href="https://mail.proton.me">├─ mail</a></p>
                         <p class="mx-3 my-0"><a href="https://www.deepl.com/translator">├─ deepl</a></p>
+                        <p class="mx-3 my-0"><a href="https://chat.openai.com/">├─ ChatGPT</a></p>
                         <p class="mx-3 my-0"><a href="https://monkeytype.com">└─ typing</a></p>
                     </div>
                 </div>
